--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -173,6 +173,12 @@
       opacity: 0.33;
       margin-right: 10px;
     }
+    .title-icon {
+      opacity: 1;
+      width: 14px;
+      height: 14px;
+      margin-right: 5px;
+    }
     .jobs-top-more {
         float: right;
         color: #6b7485;
